Fixed issue where a hover style was white when hovering on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,6 @@
 
 h1,h2,h3,h4,h5,h6,p,a,input,ul,li,span {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  color: #585858;
 }
 
 h2 {
@@ -79,7 +78,7 @@ input, textarea {
 
 a:hover {
   text-decoration: none;
-  color: white;
+  color: inherit;
 }
 
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
